kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: spaceforsunshine
  name: spaceforsunshine
  namespace: kelly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spaceforsunshine
  template:
    metadata:
      labels:
        app: spaceforsunshine
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Equal
        effect: NoSchedule
      containers:
      - name: spaceforsunshine
        image: chrisfu/spaceforsunshine:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 10
