kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spaceforsunshine
  name: spaceforsunshine
  namespace: kelly
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: spaceforsunshine
