kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spaceforsunshine
  namespace: kelly
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - spaceforsunshine.k8s.chrisfu.co.uk
    secretName: spaceforsunshine-tls
  rules:
  - host: spaceforsunshine.k8s.chrisfu.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: spaceforsunshine
          servicePort: http
